force-di/main/objects/di_Binding__mdt/fields/BindingName__c.field-meta.xml
<CustomField>
    <fullName>BindingName__c</fullName>
    <description>Binding name. Use this field instead of the standard Name field to create multiple bindings with the same name. If more than one binding is found, then the record with the lowest Binding Sequence is selected. If this field is empty, then the standard Name field will be used</description>
    <inlineHelpText>Binding name. Use this field instead of the standard Name field to create multiple bindings with the same name. If more than one binding is found, then the record with the lowest Binding Sequence is selected. If this field is empty, then the standard Name field will be used</inlineHelpText>
    <label>Binding Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>