force-di/main/objects/di_Binding__mdt/fields/BindingSequence__c.field-meta.xml
<CustomField>
    <fullName>BindingSequence__c</fullName>
    <label>Binding Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>