force-di/main/objects/di_Binding__mdt/validationRules/BindSequenceNotEmptyWhenBindingNameExist.validationRule-meta.xml
<ValidationRule>
    <fullName>BindSequenceNotEmptyWhenBindingNameExist</fullName>
    <active>true</active>
    <description>When Binding Name is specified, Binding Sequence must not be empty.</description>
    <errorConditionFormula>AND (
NOT(ISBLANK(BindingName__c)),
ISBLANK(BindingSequence__c)
)</errorConditionFormula>
    <errorDisplayField>BindingSequence__c</errorDisplayField>
    <errorMessage>When Binding Name is specified, Binding Sequence must not be empty.</errorMessage>
</ValidationRule>