force-di/main/objects/di_Binding__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>BindingObject__c</columns>
    <columns>BindingObjectAlternate__c</columns>
    <columns>BindingSequence__c</columns>
    <columns>BindingName__c</columns>
    <columns>To__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>